# SmartBoy

./: .gitignore  Cargo.toml  LeosSmartBoy.sln  host.json  run.sh
src/: main.rs  match_check.rs  riot_client.rs  store.rs  telegram_client.rs  user.rs  webhook.rs
src/LeosSmartBoy/: LeosSmartBoy.csproj  LeosSmartBoy.xproj  Program.cs  project.json
src/LeosSmartBoy/Callbacks/: InlineKeyboardCallback.cs
src/LeosSmartBoy/Callbacks/Data/: DigitalKeyboardCallback.cs
src/LeosSmartBoy/Commands/: BillCommand.cs  CommandImpl.cs  ICommandInterface.cs  RegisterCommand.cs
src/LeosSmartBoy/Helpers/: KeyboardMarkupHelpers.cs
src/LeosSmartBoy/Managers/: IStorageManager.cs  MemoryStorageManager.cs
src/LeosSmartBoy/Models/: Bill.cs  Github.cs
src/LeosSmartBoy/Properties/: AssemblyInfo.cs
src/LeosSmartBoy/Services/: BotContext.cs  BotService.cs  GithubBotService.cs
src/SmartBoy/: Program.cs  SmartBoy.csproj
src/SmartBoy/Callbacks/: InlineKeyboardCallback.cs
src/SmartBoy/Callbacks/Data/: DigitalKeyboardCallback.cs
src/SmartBoy/Commands/: BillCommand.cs  CommandImpl.cs  ICommandInterface.cs  KickCommand.cs  RegisterCommand.cs
src/SmartBoy/Helpers/: KeyboardMarkupHelpers.cs
src/SmartBoy/Managers/: IStorageManager.cs  MemoryStorageManager.cs
src/SmartBoy/Models/: Bill.cs  SameUserComparer.cs
src/SmartBoy/Properties/: AssemblyInfo.cs
src/SmartBoy/Services/: BotContext.cs  BotService.cs
