[package]
name = "smart_boy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webhook"
path = "src/webhook.rs"

[[bin]]
name = "match_check"
path = "src/match_check.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
riven = "2.4.0"
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread"]  }
frankenstein = "0.9.1"