[package]
name = "smart_boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
riven = { version = "2.4.0", features = ["tracing"] }
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread", "time"]  }
frankenstein = "0.9.1"
futures = "0.3.19"
serde = "1.0.132"
serde_json = "1.0.73"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"